# Canada-Project

./: analyzeUtilis.py  analyze_artifacts.py  analyze_calculations.py  analyze_display.py  analyze_settings.py  app.py  artifacts.py  backtest_artifacts.py  backtest_calculations.py  backtest_display.py  backtest_export.py  binning_artifacts.py  binning_calculations.py  binning_settings.py  config.py  constants.py  dataset.py  dataset_table.py  dataset_tablemodel.py  df_utils.py  display_utils.py  main_window.py  requirements.txt  settings.py  test.py  train.csv  train_artifacts.py  train_calculations.py  train_display.py  train_export.py  train_model.py  train_new.py  train_settings.py  variable_analysis_utilis.py
modellicity/: README.md  main.py  pyproject.toml  setup.cfg  train_new.py
modellicity/src/modellicity/: benchmark.py  data_source.py  loaders.py  pipeline.py
modellicity/src/modellicity/extended_pandas/: __init__.py  extended_dataframe.py  extended_series.py
modellicity/src/modellicity/logging/: log.py
modellicity/src/modellicity/models/: multivariate_utils.py  train_model.py  univariate_utils.py
modellicity/src/modellicity/plotting/: __init__.py  performance.py
modellicity/src/modellicity/settings/: __init__.py  settings.py
modellicity/src/modellicity/stats/: kpi.py  stats_utils.py  weight_of_evidence.py  weight_of_evidence_utils.py
modellicity/tests/: test_dataframe_actions.py  test_dataframe_properties.py  test_entry_actions.py  test_entry_properties.py  test_extended_dataframe.py  test_extended_series.py  test_multivariate_utils.py  test_pipeline.py  test_series_actions.py  test_series_properties.py  test_stats_utils.py  test_transformers.py  test_univariate_utils.py  test_weight_of_evidence.py  test_weight_of_evidence_utils.py
templates/: index.html  register.html
(+13 files in other folders)
