[metadata]
# This includes the license file in the wheel.
description_file = README.md

[bdist_wheel]
universal=1

[mypy]

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[flake8]
max-line-length = 100
